--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "d3": "^5.9.2",
     "d3-dsv": "^1.1.1",
     "deck.gl": "^7.0.0-beta",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-faux-dom": "^4.5.0",
     "react-map-gl": "^4.1.2"
   },
   "devDependencies": {
