--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3": "^5.9.2",
     "d3-dsv": "^1.1.1",
     "deck.gl": "^7.0.0-beta",
+    "rbush": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-faux-dom": "^4.5.0",
